# spokestack-python

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  github-deploy.yml  python-publish.yml  release-drafter.yml
docs/: README.md  requirements.in  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  spokestack.activation_timeout.rst  spokestack.agc.rst  spokestack.asr.rst  spokestack.context.rst  spokestack.io.rst  spokestack.mic.rst  spokestack.models.rst  spokestack.nlu.parsers.rst  spokestack.nlu.rst  spokestack.tts.clients.rst  spokestack.tts.rst  spokestack.vad.rst  spokestack.wakeword.rst
spokestack/: activation_timeout.py  config.py  context.py  pipeline.py  ring_buffer.py  typing.py  utils.py
spokestack/agc/: webrtc.py
spokestack/asr/: cloud_client.py  speech_recognizer.py
spokestack/inputs/: pyaudio.py
spokestack/io/: pyaudio.py  sound_device.py  utils.py
spokestack/mic/: pyaudio.py
spokestack/models/: pytorch.py  tensorflow.py
spokestack/nlu/: result.py  tflite.py
spokestack/nsx/: webrtc.py
spokestack/outputs/: pyaudio.py  speaker.py
spokestack/profile/: keyword.py  vad_trigger_asr.py  wakeword.py  wakeword_asr.py
spokestack/tts/: manager.py  (+1 more)
tests/: test_activation_timeout.py  test_context.py  test_dummy.py  test_pipeline.py  test_ring_buffer.py
(+186 files in other folders)
